--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 }
