--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-commons:$ankoVersion"
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
