--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,4 +15,5 @@ ext {
     retrofitVersion = '2.3.0'
     constraintLayoutVersion = "1.1.3"
     supportLibVersion = "28.0.0"
+    ankoVersion = '0.10.8'
 }
