--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,4 +16,6 @@ ext {
     constraintLayoutVersion = "1.1.3"
     supportLibVersion = "28.0.0"
     ankoVersion = '0.10.8'
+    rxJavaVersion = '2.2.5'
+    rxAndroidVersion = '2.1.0'
 }
