--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,4 +19,5 @@ ext {
     rxJavaVersion = '2.2.5'
     rxAndroidVersion = '2.1.0'
     rxBindingVersion = '2.0.0'
+    archComponentVersion = '1.0.0'
 }
