--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,4 +20,5 @@ ext {
     rxAndroidVersion = '2.1.0'
     rxBindingVersion = '2.0.0'
     archComponentVersion = '1.1.1'
+    daggerVersion = '2.12'
 }
